--- a/BugTracker/src/main/resources/templates/e!rror.html
+++ b/BugTracker/src/main/resources/templates/e!rror.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 	<title>Bug Tracker</title>
 </head>
-<body>
+<body class="bg-secondary">
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <a class="navbar-brand" href="/index">Bug Tracker</a>
@@ -15,11 +15,13 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-	<li class="nav-item">
-	    <a class="nav-link" sec:authorize="isAuthenticated()" th:href="@{/logout}">Log out</a>
-	</li>
-	<li class="nav-item">
-	    <a class="nav-link" sec:authorize="isAnonymous()" th:href="@{/login}">Log in</a>
+	<li class="nav-item dropdown">
+		<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Account</a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+			<a class="dropdown-item" sec:authorize="isAnonymous()" th:href="@{/login}">Log in</a>
+			<a class="dropdown-item" sec:authorize="isAuthenticated()" th:href="@{/user/settings}">Settings</a>
+            <a class="dropdown-item" sec:authorize="isAuthenticated()" th:href="@{/logout}">Log out</a>
+        </div>
 	</li>
 	<li class="nav-item dropdown" sec:authorize="isAuthenticated()">
 		<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Project</a>
@@ -46,47 +48,21 @@
     </ul>
   </div>
 </nav>
-	<div>
-		<h1>Update Ticket</h1>
-		<hr>
-		<h2>Save Changes</h2>
-		<form th:action="@{/tickets/save-ticket}" th:object = "${updateTicket}" method="POST">
-		
-			<!-- This field is required, otherwise the form creates NEW tickets instead of updating an existing one-->
-			<input type = "hidden" th:field="*{ticketId}">
-			<!-- Required, otherwise these will be set back to null -->
-			<input type = "hidden" th:field="*{creationDate}">
-			<input type = "hidden" th:field="*{projectSource}">
-			<input type = "hidden" th:field="*{submitter}">
-			<input type = "hidden" th:field="*{assignedUser}">
-			
-			
-			<input type="text" th:field = "*{title}" placeholder="Ticket Title">
-			<input type="text" th:field = "*{description}" placeholder="Ticket Description">
-			<select th:field="*{type}">
-				<option th:each="ticketType : ${T(com.jtran98.BugTracker.enums.TypeEnum).values()}"
-		            th:value="${ticketType}"
-		            th:text="${ticketType}">
-			    </option>
-			</select>
-			<select th:field="*{priority}">
-				<option th:each="ticketPriority : ${T(com.jtran98.BugTracker.enums.PriorityEnum).values()}"
-		            th:value="${ticketPriority}"
-		            th:text="${ticketPriority}">
-			    </option>
-			</select>
-			<select th:field="*{status}">
-				<option th:each="ticketStatus : ${T(com.jtran98.BugTracker.enums.StatusEnum).values()}"
-		            th:value="${ticketStatus}"
-		            th:text="${ticketStatus}">
-			    </option>
-			</select>
-			<!-- Todo: add options to change the developer/project ids, dependent on user role
-			 eg: dev can choose to take/untake ticket, PM/admin can assign others to tickets and move the ticket to a different project-->
-			<!-- Todo: add a th:action mapping to an automatic log update function -->
-			<button type="submit">Update Ticket</button>
-		</form>
-	</div>
+<div align="center">
+<pre class="text-white">__/\\\\\\\\\\\____________/\\\\\\\\\\\\\\\__/\\\________/\\\________/\\\\\\\\\__/\\\________/\\\__/\\\\\\\\\\\\\\\__/\\\\\\\\\\\\_______________/\\\________/\\\__/\\\\\\\\\\\\\___        
+ _\/////\\\///____________\/\\\///////////__\/\\\_______\/\\\_____/\\\////////__\/\\\_____/\\\//__\/\\\///////////__\/\\\////////\\\____________\/\\\_______\/\\\_\/\\\/////////\\\_       
+  _____\/\\\_______________\/\\\_____________\/\\\_______\/\\\___/\\\/___________\/\\\__/\\\//_____\/\\\_____________\/\\\______\//\\\___________\/\\\_______\/\\\_\/\\\_______\/\\\_      
+   _____\/\\\_______________\/\\\\\\\\\\\_____\/\\\_______\/\\\__/\\\_____________\/\\\\\\//\\\_____\/\\\\\\\\\\\_____\/\\\_______\/\\\___________\/\\\_______\/\\\_\/\\\\\\\\\\\\\/__     
+    _____\/\\\_______________\/\\\///////______\/\\\_______\/\\\_\/\\\_____________\/\\\//_\//\\\____\/\\\///////______\/\\\_______\/\\\___________\/\\\_______\/\\\_\/\\\/////////____    
+     _____\/\\\_______________\/\\\_____________\/\\\_______\/\\\_\//\\\____________\/\\\____\//\\\___\/\\\_____________\/\\\_______\/\\\___________\/\\\_______\/\\\_\/\\\_____________   
+      _____\/\\\_______________\/\\\_____________\//\\\______/\\\___\///\\\__________\/\\\_____\//\\\__\/\\\_____________\/\\\_______/\\\____________\//\\\______/\\\__\/\\\_____________  
+       __/\\\\\\\\\\\___________\/\\\______________\///\\\\\\\\\/______\////\\\\\\\\\_\/\\\______\//\\\_\/\\\\\\\\\\\\\\\_\/\\\\\\\\\\\\/______________\///\\\\\\\\\/___\/\\\_____________ 
+        _\///////////____________\///_________________\/////////___________\/////////__\///________\///__\///////////////__\////////////__________________\/////////_____\///______________</pre>
+<a class="btn btn-danger" href="/index" role="button">Let's pretend this never happened</a>
+</div>
+
+
+
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 </body>
