--- a/BugTracker/src/main/resources/templates/index.html
+++ b/BugTracker/src/main/resources/templates/index.html
@@ -15,16 +15,18 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-	<li class="nav-item">
-	    <a class="nav-link" sec:authorize="isAuthenticated()" th:href="@{/logout}">Log out</a>
-	</li>
-	<li class="nav-item">
-	    <a class="nav-link" sec:authorize="isAnonymous()" th:href="@{/login}">Log in</a>
+	<li class="nav-item dropdown">
+		<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Account</a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+			<a class="dropdown-item" sec:authorize="isAnonymous()" th:href="@{/login}">Log in</a>
+			<a class="dropdown-item" sec:authorize="isAuthenticated()" th:href="@{/user/settings}">Settings</a>
+            <a class="dropdown-item" sec:authorize="isAuthenticated()" th:href="@{/logout}">Log out</a>
+        </div>
 	</li>
 	<li class="nav-item dropdown" sec:authorize="isAuthenticated()">
 		<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Project</a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-			<a class="dropdown-item" href = "/project/project-tickets">Tickets</a>
+			<a class="dropdown-item" href = "/tickets/project-tickets">Tickets</a>
             <a class="dropdown-item" href= "/project/project-members" sec:authorize="hasAnyAuthority('ADMINISTRATOR','PROJECTMANAGER')">Members</a>
         </div>
 	</li>
@@ -41,6 +43,7 @@
 			<a class="dropdown-item" href= "/management/create-user">Create User</a>
             <a class="dropdown-item" href= "/management/manage-users">Manage Users</a>
             <a class="dropdown-item" href= "/management/manage-tickets">Manage Tickets</a>
+            <a class="dropdown-item" href= "/management/manage-projects">Manage Projects</a>
         </div>
 	</li>
     </ul>
