--- a/BugTracker/src/main/resources/templates/ticket/modify-ticket.html
+++ b/BugTracker/src/main/resources/templates/ticket/modify-ticket.html
@@ -15,16 +15,18 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-	<li class="nav-item">
-	    <a class="nav-link" sec:authorize="isAuthenticated()" th:href="@{/logout}">Log out</a>
-	</li>
-	<li class="nav-item">
-	    <a class="nav-link" sec:authorize="isAnonymous()" th:href="@{/login}">Log in</a>
+	<li class="nav-item dropdown">
+		<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Account</a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+			<a class="dropdown-item" sec:authorize="isAnonymous()" th:href="@{/login}">Log in</a>
+			<a class="dropdown-item" sec:authorize="isAuthenticated()" th:href="@{/user/settings}">Settings</a>
+            <a class="dropdown-item" sec:authorize="isAuthenticated()" th:href="@{/logout}">Log out</a>
+        </div>
 	</li>
 	<li class="nav-item dropdown" sec:authorize="isAuthenticated()">
 		<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Project</a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-			<a class="dropdown-item" href = "/project/project-tickets">Tickets</a>
+			<a class="dropdown-item" href = "/tickets/project-tickets">Tickets</a>
             <a class="dropdown-item" href= "/project/project-members" sec:authorize="hasAnyAuthority('ADMINISTRATOR','PROJECTMANAGER')">Members</a>
         </div>
 	</li>
@@ -41,35 +43,54 @@
 			<a class="dropdown-item" href= "/management/create-user">Create User</a>
             <a class="dropdown-item" href= "/management/manage-users">Manage Users</a>
             <a class="dropdown-item" href= "/management/manage-tickets">Manage Tickets</a>
+			<a class="dropdown-item" href= "/management/manage-projects">Manage Projects</a>
         </div>
 	</li>
     </ul>
   </div>
 </nav>
-
-<div align="center">
-	<h1>All Tickets</h1>
-	<a th:href = "@{/tickets/submit-new-ticket}">New Ticket</a>
-	<table border="1">
-		<thead>
-			<tr>
-				<th>Title</th>
-				<th>Description</th>
-				<th>Developer ID</th>
-				<th>Status</th>
-			</tr>
-		</thead>
-		<tbody>
-			<tr th:each="ticket : ${allTickets}">
-				<td th:text="${ticket.title}"></td>
-				<td th:text="${ticket.description}"></td>
-				<td th:text="${ticket.assignedUser?.userId}"></td>
-				<td th:text="${ticket.status}"></td>
-			</tr>
-		</tbody>
-	</table>
-</div>
-
+	<div align="center">
+		<br>
+		<h2>Save Ticket</h2><br>
+		<form th:action="@{/tickets/save-ticket}" th:object = "${modifyTicket}" method="POST" style="max-width: 650px;">
+			
+			<input type="hidden" th:value="${#authentication.principal.userId}">
+			<!-- This field is required, otherwise the form creates NEW tickets instead of updating an existing one-->
+			<input type = "hidden" th:field="*{ticketId}">
+			<!-- Required, otherwise these will be set back to null -->
+			<input type = "hidden" th:field="*{creationDate}">
+			<input type = "hidden" th:field="*{projectSource}">
+			<input type = "hidden" th:field="*{submitter}">
+			<input type = "hidden" th:field="*{assignedUser}">
+			
+			<label>Title</label>
+			<input class="form-control" type="text" th:field = "*{title}" placeholder="Ticket Title">
+			<label>Description</label>
+			<input class="form-control" type="text" th:field = "*{description}" placeholder="Ticket Description">
+			<label>Issue Type</label>
+			<select class="form-control" th:field="*{type}">
+				<option th:each="ticketType : ${T(com.jtran98.BugTracker.enums.TypeEnum).values()}"
+		            th:value="${ticketType}"
+		            th:text="${ticketType}">
+			    </option>
+			</select>
+			<label>Priority Level</label>
+			<select class="form-control" th:field="*{priority}">
+				<option th:each="ticketPriority : ${T(com.jtran98.BugTracker.enums.PriorityEnum).values()}"
+		            th:value="${ticketPriority}"
+		            th:text="${ticketPriority}">
+			    </option>
+			</select>
+			<label>Status</label>
+			<select class="form-control" th:field="*{status}">
+				<option th:each="ticketStatus : ${T(com.jtran98.BugTracker.enums.StatusEnum).values()}"
+		            th:value="${ticketStatus}"
+		            th:text="${ticketStatus}">
+			    </option>
+			</select>
+			<br><button type="submit" class="btn btn-primary">Create Ticket</button>
+		</form>		
+	</div>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 </body>
