--- a/BugTracker/src/main/resources/templates/ticket/modify-ticket.html
+++ b/BugTracker/src/main/resources/templates/ticket/modify-ticket.html
@@ -88,7 +88,7 @@
 		            th:text="${ticketStatus}">
 			    </option>
 			</select>
-			<br><button type="submit" class="btn btn-primary">Create Ticket</button>
+			<br><button type="submit" class="btn btn-primary">Save</button>
 		</form>		
 	</div>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
