--- a/BugTracker/src/main/resources/templates/ticket/ticket-details.html
+++ b/BugTracker/src/main/resources/templates/ticket/ticket-details.html
@@ -26,7 +26,7 @@
 	<li class="nav-item dropdown" sec:authorize="isAuthenticated()">
 		<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Project</a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-			<a class="dropdown-item" href = "/project/project-tickets">Tickets</a>
+			<a class="dropdown-item" href = "/tickets/project-tickets">Tickets</a>
             <a class="dropdown-item" href= "/project/project-members" sec:authorize="hasAnyAuthority('ADMINISTRATOR','PROJECTMANAGER')">Members</a>
         </div>
 	</li>
@@ -49,6 +49,57 @@
     </ul>
   </div>
 </nav>
+
+	<br><br>
+	<div align="center" style="max-width: ">
+	<h3>Ticket Details</h3>
+<dl class="row" style="max-width: 900px">
+  <dt class="col-sm-3">Submitter</dt>
+  <dd class="col-sm-9" th:text="${ticketDetails.submitter?.firstName + ' ' + ticketDetails.submitter?.lastName}"></dd>
+  <dt class="col-sm-3">Description</dt>
+  <dd class="col-sm-9" th:text="${ticketDetails.description}"></dd>
+  <dt class="col-sm-3">Submission Date</dt>
+  <dd class="col-sm-9" th:text="${ticketDetails.creationDate}"></dd>
+  <dt class="col-sm-3">Project</dt>
+  <dd class="col-sm-9" th:text="${ticketDetails.projectSource?.projectName}"></dd>
+  <dt class="col-sm-3">Type</dt>
+  <dd class="col-sm-9" th:text="${ticketDetails.type}"></dd>
+  <dt class="col-sm-3">Priority</dt>
+  <dd class="col-sm-9" th:text="${ticketDetails.priority}"></dd>
+  <dt class="col-sm-3">Status</dt>
+  <dd class="col-sm-9" th:text="${ticketDetails.status}"></dd>
+  <dt class="col-sm-3">Last Update</dt>
+  <dd class="col-sm-9" th:text="${ticketDetails.mostRecentUpdateDate}"></dd>
+</dl>
+
+<a th:href="@{/tickets/update-ticket/{id}(id=${ticketDetails.ticketId})}">Update Ticket</a><br>
+<a th:href="@{/tickets/update-ticket/{id}(id=${ticketDetails.ticketId})}">View File</a><br><br>
+
+	<h3>Comments</h3>
+	<table th:unless="${#lists.isEmpty(commentEntries)}" class="table table-bordered table-hover">
+	  <thead>
+	    <tr>
+	      <th scope="col">User</th>
+	      <th scope="col">Comment</th>
+	      <th scope="col">Date</th>
+	    </tr>
+	  </thead>
+	  <tbody>
+	    <tr th:each="comment : ${commentEntries}" th:unless="${#lists.isEmpty(commentEntries)}">
+	      <td th:text="${comment.commenter?.firstName + ' ' + comment.commenter?.lastName}" scope="row"></td>
+	      <td th:text="${comment.description}" scope="row"></td>
+	      <td th:text="${comment.date}" scope="row"></td>
+	    </tr>
+	  </tbody>
+	</table>
+
+<form th:action="@{/tickets/make-comment/{id}(id=${ticketDetails.ticketId})}" th:object = "${comment}" method="POST" style="max-width: 650px;">
+	<input class="form-control" type="text" th:field = "*{description}" placeholder="Write something">
+	<br><button type="submit" class="btn btn-primary">Leave comment</button>
+</form>
+
+</div>
+<!-- th:href="${/tickets/make-comment/{id}(id=${ticketDetails.ticketId})}" -->
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
