--- a/BugTracker/src/main/resources/templates/ticket/modify-ticket.html
+++ b/BugTracker/src/main/resources/templates/ticket/modify-ticket.html
@@ -54,7 +54,6 @@
 		<h2>Save Ticket</h2><br>
 		<form th:action="@{/tickets/save-ticket}" th:object = "${modifyTicket}" method="POST" style="max-width: 650px;">
 			
-			<input type="hidden" th:value="${#authentication.principal.userId}">
 			<!-- This field is required, otherwise the form creates NEW tickets instead of updating an existing one-->
 			<input type = "hidden" th:field="*{ticketId}">
 			<!-- Required, otherwise these will be set back to null -->
@@ -90,7 +89,7 @@
 			</select>
 			<br><button type="submit" class="btn btn-primary">Save</button>
 		</form>
-		<form sec:authorize="hasAnyAuthority('ADMINISTRATOR','PROJECTMANAGER')" th:action="@{/tickets/delete-ticket/{id}(id=${modifyTicket.ticketId})}"><button type="submit" class="btn btn-danger">Delete Ticket</button></form>		
+		<form sec:authorize="hasAnyAuthority('ADMINISTRATOR','PROJECTMANAGER')" th:action="@{/tickets/delete-ticket/{id}(id=${modifyTicket.ticketId})}"><br><button type="submit" class="btn btn-danger">Delete Ticket</button></form>		
 	</div>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
