--- a/BugTracker/src/main/resources/templates/ticket/ticket-details.html
+++ b/BugTracker/src/main/resources/templates/ticket/ticket-details.html
@@ -64,8 +64,8 @@
 <br>
 
 <div align="center" style="max-width: 400px;">
-<form th:action="@{/tickets/upload-file/{id}(id=${ticketDetails.ticketId})}" enctype="multipart/form-data" method="POST">
-	<input type="file" name="file" style="float: left;"><button th:if="${#authentication.principal.userId == ticketDetails.submitter?.userId}" type="submit" class="btn btn-primary" style="margin-bottom: 200px;">Upload File</button>
+<form th:if="${#authentication.principal.userId == ticketDetails.submitter?.userId}" th:action="@{/tickets/upload-file/{id}(id=${ticketDetails.ticketId})}" enctype="multipart/form-data" method="POST">
+	<input type="file" name="file" style="float: left;"><button type="submit" class="btn btn-primary" style="margin-bottom: 200px;">Upload File</button>
 </form>
 </div>
 
