--- a/BugTracker/src/main/resources/static/fragments/navbar.html
+++ b/BugTracker/src/main/resources/static/fragments/navbar.html
@@ -33,10 +33,13 @@
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
 			<a class="dropdown-item" href= "/management/create-user">Create User</a>
             <a class="dropdown-item" href= "/management/manage-users">Manage Users</a>
-            <a class="dropdown-item" href= "/management/manage-tickets">Manage Tickets</a>
-            <a class="dropdown-item" href= "/management/manage-projects">Manage Projects</a>
+            <a class="dropdown-item" href= "/tickets/manage-tickets">Manage Tickets</a>
+            <a class="dropdown-item" href= "/projects/manage-projects">Manage Projects</a>
         </div>
 	</li>
+	<li class="nav-item" sec:authorize="isAuthenticated()">
+        <a class="nav-link" href="/tickets/submit-new-ticket">Submit Ticket</a>
+      </li>
     </ul>
   </div>
 </nav>
