--- a/BugTracker/src/main/resources/templates/project/view-projects.html
+++ b/BugTracker/src/main/resources/templates/project/view-projects.html
@@ -13,39 +13,33 @@
 	<br>
 	<div class="jumbotron jumbotron-fluid">
 	  <div class="container">
-	    <h1 th:if="${viewProjectTickets}" th:text="'Project \'' + ${#authentication.principal.projectTeam?.projectName} +'\' Tickets'"></h1>
-		<h1 th:if="${viewSubmittedTickets}" th:text="${#authentication.principal.firstName} +'\'s Submitted Tickets'"></h1>
-		<h1 th:if="${viewAssignedTickets}" th:text="${#authentication.principal.firstName} +'\'s Assigned Tickets'"></h1>
-		<h1 th:if="${viewAllTickets}">All Tickets</h1>
+		<h1>All Projects</h1>
 	  </div>
 	</div>
 	
+	<a th:href="@{/projects/create-new-project}">Create New Project</a>
+	
 	<br><br>
+	
 	
 	<table class="table table-bordered table-hover">
 	  <thead>
 	    <tr>
-	      <th scope="col">Priority</th>
-	      <th scope="col">Title</th>
-	      <th scope="col">Description</th>
-	      <th scope="col">Type</th>
-	      <th scope="col">Status</th>
+	      <th scope="col">Project Name</th>
 	      <th scope="col" colspan="2" align="center">Actions</th>
 	    </tr>
 	  </thead>
-	  <tbody th:if="${viewTickets != null}">
-	    <tr th:each="ticket : ${#lists.sort(viewTickets, ticketComparator)}">
-	      <td th:text="${ticket.priority}" scope="row"></td>
-	      <td th:text="${ticket.title}" scope="row"></td>
-	      <td th:text="${ticket.description}" scope="row"></td>
-	      <td th:text="${ticket.type}" scope="row"></td>
-	      <td th:text="${ticket.status}" scope="row"></td>
-	      <td><a th:href="@{/tickets/view-details/{id}(id=${ticket.ticketId})}">Details</a></td>
-	      <td><a sec:authorize="hasAnyAuthority('ADMINISTRATOR','PROJECTMANAGER')" th:href="@{/tickets/delete-ticket/{id}(id=${ticket.ticketId})}" class="btn btn-danger">Delete</a></td>
+	  <tbody th:if="${projects != null}">
+	    <tr th:each="project : ${#lists.sort(projects, projectComparator)}">
+	      <td th:text="${project.projectName}" scope="row"></td>
+	      <td><a th:href="@{/projects/update-project/{id}(id=${project.projectId})}">Edit</a></td>
 	    </tr>
 	  </tbody>
 	</table>
+	
 </div>
+
+
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
