--- a/BugTracker/src/main/resources/templates/ticket/modify-ticket.html
+++ b/BugTracker/src/main/resources/templates/ticket/modify-ticket.html
@@ -49,7 +49,8 @@
 			</select>
 			<br><button type="submit" class="btn btn-primary">Save</button>
 		</form>
-		<form sec:authorize="hasAnyAuthority('ADMINISTRATOR','PROJECTMANAGER')" th:action="@{/tickets/delete-ticket/{id}(id=${modifyTicket.ticketId})}"><br><button type="submit" class="btn btn-danger">Delete Ticket</button></form>		
+		<br>
+		<a th:if="${modifyTicket.creationDate != null}" sec:authorize="hasAnyAuthority('ADMINISTRATOR','PROJECTMANAGER')" th:href="@{/tickets/delete-ticket/{id}(id=${modifyTicket.ticketId})}" class="btn btn-danger">Delete Ticket</a>
 	</div>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
